--- a/index.css
+++ b/index.css
@@ -3,10 +3,22 @@
     margin: auto;
 }
 
+.card{
+    background-color: rgb(113, 203, 255);
+}
+
 .card-body{
-    background-color: rgba(43, 40, 40, 0.13);
+    background-color:  rgb(233, 233, 233);
 }
 
 .alert-success, .alert-danger {
     margin: 1% 0;
+}
+
+.botao{
+    background-color: rgb(113, 203, 255);
+}
+
+.botao:hover{
+    background-color:  rgb(233, 233, 233);
 }
